clusters/sserver/anki/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anki
  namespace: anki
  labels:
    app: anki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: anki
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: anki
    spec:
      containers:
        - image: kuklinistvan/anki-sync-server:latest
          name: anki
          ports:
            - containerPort: 27701
              name: http
          volumeMounts:
            - mountPath: /app/data
              name: data
              readOnly: false
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: anki-data
status: {}
