clusters/sserver/anki/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: anki
  name: anki
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "anki.ssene.ca"
      secretName: "anki-tls-cert"
  rules:
    - host: "anki.ssene.ca"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: "http"
                port:
                  number: 27701
